--- a/css/style.css
+++ b/css/style.css
@@ -1674,7 +1674,7 @@ nav {
   }
   .social-links {
     position: relative;
-    top: 10em;
+    top: 4em;
   }
 }
 /* RESPONSIVE VIEW ON SOME SMALLER LAPTOPS 
